--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,16 @@
 PORT = 3001
-MONGO_URL=mongodb+srv://vohuykhoa:vohuykhoa@cluster0.nppkasl.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://vohuykhoa:vohuykhoa@cluster0.nppkasl.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://yadiraelham0:WKamEQsZ5XPm4q0V@cluster0.ke7jv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 JWT_SECRET=jwttoken
 REFRESH_TOKEN_SECRET=refreshtoken
 URL_LOCALHOST=http://localhost:3000
 URL_PRODUCTION=https://chatapp-vo-huy-khoa.vercel.app
+
+
+
+
+
+
+
+#     WKamEQsZ5XPm4q0V
