--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,42 @@
+# # Use an official Node.js image as a base
+# FROM node:16
+
+# # Set the working directory
+# WORKDIR /usr/src/app
+
+# # Copy package.json and package-lock.json
+# COPY backend/package*.json ./
+
+# # Install dependencies
+# RUN npm install
+
+# # Copy the rest of the app code
+# COPY backend/ .
+
+# # Expose the backend port
+# EXPOSE 5000
+
+# # Start the server
+# CMD ["npm", "run", "dev"]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # Use an official Node.js image as a base
 FROM node:16
 
@@ -5,13 +44,13 @@ FROM node:16
 WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json
-COPY backend/package*.json ./
+COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the app code
-COPY backend/ .
+COPY . .
 
 # Expose the backend port
 EXPOSE 5000
